# gtfs-structure

./: Cargo.toml
src/: gtfs.rs  gtfs_reader.rs  raw_gtfs.rs
